--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Mini Banca</title>
+  <title>Money Tycoon</title>
 </head>
 <body>
   <h1>Saldo: $<span id="saldo"></span></h1>
