--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Money Tycoon</title>
+  <link rel="icon" type="image/png" href="money_tycoon.png">
 </head>
 <body>
   <h1>Saldo: $<span id="saldo"></span></h1>
