--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     <p>💵 Produzione: <span id="produzione">0$ al secondo</span></p>
     <p>📈 Livello: <span id="livello">0</span></p>
   </div>
+  <h2>📈 Mercato Azionario</h2>
+    <div id="azioniContainer">
+        <!-- Le aziende verranno inserite qui via JS -->
+    </div>
+
 
 
   <script src="banca.js"></script>
